--- a/umalator/todo.org
+++ b/umalator/todo.org
@@ -1,10 +1,12 @@
-* TODO draw velocity lines on course chart
-** TODO save min/max and allow different runs to be displayed
+* DONE draw velocity lines on course chart
+** DONE save min/max and allow different runs to be displayed
 make a best effort to save/estimate mean and median as well (e.g. using some (approximate?) on-line selection algorithm)
 - we know how many runs we're doing in advance so can use some kind of on-line kth-min algorithm for median?
 - other options: do some x% of the runs and then pick the next one that's closest to the observed mean/median
+found the latter easier.
 * TODO integrated bashin chart
 * TODO skill hints/cost calculator?
+* TODO show skill activations on course chart
 * miscellany
 ** DONE sort skills by disp_order from the db
 add to skill_meta.json
