race time of day selector

--- a/umalator/todo.org
+++ b/umalator/todo.org
@@ -16,4 +16,4 @@ i assume theres some kind of event for this
 ** make the skill activation position tables on the right scroll when they run out of room instead of causing the viewport to scroll
 this is oddly difficult, especially because i don't want the captions to also scroll so can't just wrap it in a div
 css table behavior is rather strange to me
-** race time selector
+** DONE race time selector
