--- a/umalator/todo.org
+++ b/umalator/todo.org
@@ -8,12 +8,25 @@ found the latter easier.
 * TODO skill hints/cost calculator?
 * DONE show skill activations on course chart
 * TODO jp localization
+* TODO choose motivation
+* TODO choose popularity
+probably should involve un-splitting sirius unique, try to come up with a solution that also works for the bashin chart
+* TODO animations
+might be cool to animate e.g., the histogram bars popping up
 * miscellany
 ** DONE sort skills by disp_order from the db
 add to skill_meta.json
 ** TODO respond to url hash change events to load state
 i assume theres some kind of event for this
-** make the skill activation position tables on the right scroll when they run out of room instead of causing the viewport to scroll
+** TODO make the skill activation position tables on the right scroll when they run out of room instead of causing the viewport to scroll
 this is oddly difficult, especially because i don't want the captions to also scroll so can't just wrap it in a div
 css table behavior is rather strange to me
 ** DONE race time selector
+** TODO revert to mob by deleting uma name
+* bugs
+** TODO shorter skills can overlap longer skills if the shorter skill is placed first
+need to check if b.start/end is within in r in addition to r within b
+** TODO skill id is repeated on each alternative
+** TODO tab order in expanded uma pane is wrong
+** TODO expanding uma pane sets selected uma to 2
+expand button click bubbling up to tab click; need stopPropagation()
