--- a/umalator/todo.org
+++ b/umalator/todo.org
@@ -27,7 +27,7 @@ css table behavior is rather strange to me
 ** TODO shorter skills can overlap longer skills if the shorter skill is placed first
 need to check if b.start/end is within in r in addition to r within b
 ** TODO skill id is repeated on each alternative
-** TODO tab order in expanded uma pane is wrong
+** DONE tab order in expanded uma pane is wrong
 ** TODO expanding uma pane sets selected uma to 2
 expand button click bubbling up to tab click; need stopPropagation()
 ** TODO potential skill desync issues
