filter by skill names/conditions in skill picker

--- a/umalator/todo.org
+++ b/umalator/todo.org
@@ -23,6 +23,7 @@ this is oddly difficult, especially because i don't want the captions to also sc
 css table behavior is rather strange to me
 ** DONE race time selector
 ** TODO revert to mob by deleting uma name
+** DONE text search for skill picker
 * bugs
 ** DONE shorter skills can overlap longer skills if the shorter skill is placed first
 need to check if b.start/end is within in r in addition to r within b
@@ -33,3 +34,5 @@ expand button click bubbling up to tab click; need stopPropagation()
 ** TODO potential skill desync issues
 possibly having random skills on both umas that the other doesn't have can cause the activations for random skills that
 they DO both have to become desynced. need to look into this.
+** TODO lock up after clicking min/max/etc in certain circumstances
+reproduce: https://alpha123.github.io/uma-tools/umalator/#H4sIAAAAAAAACtWPz2rDMAyH30VnH%2ByUQsitx7HLoMfRg0iUzDS2jP8QSsm7T%2FZaxvoGu0my9f0%2B3WHkEhO9TTAY3etegU%2FowkoJhqPWCkqiD07vRAGGHAspiDjSRDMMd3DMstgpWCIXXxkKNsL8RbHViTCxb2W2jh5fcaKapnehOzQVxCXPNlcLMPrQawOyHIgqsj%2BKRsrorEdpu2oVeGsRTXEpOT0fNpsmdtIddNuKmGm5CfZM%2FspFsJMVlh%2FpFLLNparAuaaVOOOf6Ql%2BAa%2Fjq11XyfwUW9E1cPm5pXu55Z9ccdn3b6%2Fl3rQJAgAA
