double click to add skills from bashin chart

--- a/umalator/todo.org
+++ b/umalator/todo.org
@@ -4,7 +4,7 @@ make a best effort to save/estimate mean and median as well (e.g. using some (ap
 - we know how many runs we're doing in advance so can use some kind of on-line kth-min algorithm for median?
 - other options: do some x% of the runs and then pick the next one that's closest to the observed mean/median
 found the latter easier.
-* TODO integrated bashin chart
+* DONE integrated bashin chart
 * TODO skill hints/cost calculator?
 * DONE show skill activations on course chart
 * TODO jp localization
@@ -61,6 +61,8 @@ i.e. course, ground type, weather, etc
 - selective imports for d3
 - what else?
 ** TODO sprite sheet instead of loading individual images for icons and stuff
+** TODO replace skills of the same group when one is added from the bashin chart
+** TODO remove skills of the same group on uma2 when running bashin chart
 * bugs
 ** DONE shorter skills can overlap longer skills if the shorter skill is placed first
 need to check if b.start/end is within in r in addition to r within b
