run simulations in a background thread for responsiveness
already happened for chart mode, now doing it for compare mode also

could be multithreaded in the future but for now one background thread is fine.

also reruns simulations a lot since the seed is fixed. consider looking into advancing the seed and merging results in the future (would also allow multithreading compare sims)

--- a/umalator/todo.org
+++ b/umalator/todo.org
@@ -24,7 +24,7 @@ possibly presented as another "tab" underneath the chart (tabbed with min/max/me
 ** TODO eventually, stamina calculator mode
 * TODO unique skill levels
 also implement unique scaling in sim
-* TODO run compare simulator in worker
+* DONE run compare simulator in worker
 should probably not be run on the main UI thread
 * TODO cleanup
 ** TODO build system
