--- a/umalator/todo.org
+++ b/umalator/todo.org
@@ -90,3 +90,7 @@ reproduce: https://alpha123.github.io/uma-tools/umalator/#H4sIAAAAAAAACtWPwU7EMA
 HpPolicy is instantiated before greens are activated; need some kind of explicit init(horse) method to set hp after the
 first round of skill activation
 reproduce: https://alpha123.github.io/uma-tools/umalator-global/#H4sIAAAAAAAACtWOzUoEMRCE36XPOSRRB5nbHkUQwaPsIUx6xuDkh6TDIMu8u937g%2BgbeKsuur6qE0y514ZPHkajBz0oSM3FsmKD8UFrBb3ha27PiAVGqh0VVDehxxnGE8ScOWgVLDX3JAwFGzr6wHrWDV3L6fxBIeL11XmUNr0zPTojoNxpDiQrADhWEAVmZUAjF0Nyt7PkTeCPopdOPPNe5Baaz%2FF6NKqOcPli2ktYkIk%2BMCZNeCgUqEs%2FvElRr7P75R7gJ%2F7X%2Fgzryn3vx8tw%2B%2B%2BGAw%2FRd5YtFuYmrLkIM2gDx33%2FBpiw3qEUAgAA
+
+** TODO skill id 104901111 always drains 100% stamina             :simulator:
+as a result of no scaling being implemented
+this seems to be kind of weird since it does cause a fresh regression checkpoint to fail
